trustfall_core/test_data/tests/parse_errors/variable_in_root_query.parse-error.ron
Err(VariableDefinitionInRootQuery(Pos(
    line: 10,
    column: 9
)))
